feat: can make and get appointments at /appointments
* feat: create appointment table with it status's enum

* feat: create appointment class, status enum and dao

* chore: findByStatus() & findById()

* chore: appointment.model -> rest

* chore: getPaginatedAppointmentsByStatus, getById, save, update

* chore: update create_table_appointment script

* fix: save appointment is not idempotent

---------
